Update Dockerfile to build and serve the application